<resources>
    <string name="app_name">Jaipur Bus &amp; Tourism</string>
    <string name="lbl_hindi">हिंदी</string>
    <string name="lbl_english">English</string>
    <string name="lbl_change_at">Change At:</string>
    <string name="msg_change_language_en">Select atleast one language in which you want to access the app.</string>
    <string name="msg_change_language_hi">कम से कम एक ऐसी भाषा चुनें जिसमें आप ऐप को एक्सेस करना चाहते हैं।</string>

    <string name="msg_change_language">Select atleast one language in which you want to access the app.</string>
    <string name="error_phone_required">Phone number required.</string>
    <string name="error_phone">Invalid phone number.</string>
    <string name="lbl_phone_number">Phone</string>
    <string name="lbl_search_bus">Search Bus</string>
    <string name="lbl_search_station">Search Bus Station</string>
    <string name="lbl_routes">All Routes</string>
    <string name="lbl_places">Places to visit</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_more">More</string>
    <string name="hint_destination">Destination</string>
    <string name="hint_password">Password</string>
    <string name="hint_source">Source</string>
    <string name="get_bus">Get Bus</string>
    <string name="lbl_metro">Metro</string>
    <string name="lbl_minibus">Mini Bus</string>
    <string name="lbl_low_floor">Low Floor</string>
    <string name="lbl_copyright">© Copyright Jaipur Bus &amp; Tours. All Rights Reserved.\n Version (%1$s)</string>
    <string name="lbl_version">Version (%1$s)</string>
    <string name="lbl_route">Route</string>
    <string name="lbl_direct_bus">Direct Bus:</string>
    <string name="lbl_multi_bus">Multiple Bus:</string>
    <string name="lbl_no">No</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_route_list">Route List</string>
    <string name="lbl_route_map">Route Map</string>
    <string name="lbl_historical">Historical</string>
    <string name="lbl_hotels">Hotels</string>
    <string name="lbl_markets">Markets</string>
    <string name="lbl_shopping_mall">Shopping Mall</string>
    <string name="lbl_cinema">Cinema</string>
    <string name="lbl_hospitals">Hospitals</string>
    <string name="lbl_cafe_restaurent">Cafe &amp; Restaurents</string>
    <string name="lbl_update_now">Update Now</string>
    <string name="lbl_ok">Ok</string>
    <string name="lbl_change_language">Change Language</string>
    <string name="lbl_about_us">About Us</string>
    <string name="lbl_privacy_policy">Privacy Policy</string>
    <string name="lbl_share">Share</string>
    <string name="lbl_contact_us">Contact Us</string>
    <string name="lbl_previous">Previous</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_about">About</string>
    <string name="lbl_submit">Submit</string>
    <string name="lbl_send">Send</string>
    <string name="lbl_full_name">Full Name</string>
    <string name="lbl_back">Move Back</string>
    <string name="lbl_email_address">Email Address</string>
    <string name="lbl_message_here">Message...</string>
    <string name="lbl_contact_info">Contact Information</string>
    <string name="lbl_phone"><b>Phone : </b> %1$s</string>
    <string name="lbl_email"><b>Email : </b> %1$s</string>
    <string name="lbl_website"><b>Website : </b> %1$s</string>
    <string name="lbl_ticket"><b>Ticket ID : #</b> %1$s</string>
    <string name="lbl_star">%1$s Star</string>
    <string name="msg_about_us"><b>Jaipur Bus &amp; Tourism</b> is the first city app of Jaipur, which aims to cater to the needs and views of the citizens of Jaipur while providing valuable information about the Pink City  and about the transportations rooutes inside the city to people across the globe. Jaipur Bus &amp; Tourism is the largest travel platform helping one million travelers every month.
We are trying to make every trip on their best trip.
<br />
<b>Jaipur Bus &amp; Tourism</b> is an online travel platform. It is a place where determination and commitment has always exceeded the expectations of the travelers. We provide information about all places of Jaipur.
<br />
<b>Jaipur Bus &amp; Tourism</b>  is available in multiple languages (as of now in Hindi and English), So things can be easier for the people.</string>

    <string name="msg_exit_confirm">Are you sure you want to quit?</string>
    <string name="something_wrong">Something went wrong, try again.</string>
    <string name="error_source_dest_required">Enter Source/Destination before proceeding towards search results.</string>
    <string name="error_type_required">Please selected atleast one option (metro/minibus/low floor) to get the search results.</string>
    <string name="error_select_state">Please select state.</string>
    <string name="error_select_city">Please select city.</string>
    <string name="error_fullname">Please enter full name.</string>
    <string name="error_valid_name">Please enter a valid name.</string>
    <string name="error_email">Please enter email address.</string>
    <string name="error_valid_email">Please enter a valid email address.</string>
    <string name="error_message">Message cannot be empty.</string>
    <string name="error_no_result">No matched routes found. </string>
    <string name="error_valid_message">Message length should be more than 10 characters.</string>
    <string name="msg_share">Still Asking For Bus Routes and places in Jaipur City? Now No More. Download \'JaipurBus &amp; Tourism\' https://play.google.com/store/apps/details?id=%1$s</string>
    <string name="lbl_share_via">Share via</string>
    <string name="lbl_get_direction">Get Direction</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_move_next">Next</string>
    <string name="lbl_country">Country</string>
    <string name="lbl_gender">Gender</string>
    <string name="lbl_state">State</string>
    <string name="lbl_city">City</string>
    <string name="lbl_select_country">Select Country</string>
    <string name="lbl_india">India</string>
    <string name="lbl_other">Other</string>
    <string name="lbl_male">Male</string>
    <string name="lbl_female">Female</string>
    <string name="lbl_select_state">Select State</string>
    <string name="lbl_select_city">Select City</string>

    <string name="default_notification_channel_id">Default</string>
    <string name="app_update_msg">There is newer version of this application available. please upgrade now.</string>
    <string name="admob_app_id">ca-app-pub-7930377749446639~5196825392</string>
    <string name="admob_unit_id">ca-app-pub-7930377749446639/6405911389</string>
    <string name="admob_unit_id_intersitial">ca-app-pub-7930377749446639/6233229332</string>
    <string name="admob_unit_id_native">ca-app-pub-7930377749446639~5196825392</string>
    <!--  <string name="admob_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->


</resources>