<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_shape"
        android:orientation="vertical">

        <com.codersworld.jplibs.customFonts.SBTextViewBold
            android:layout_width="match_parent"
            android:layout_height="@dimen/_44dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_10dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_0_5dp"
            android:background="@color/light_transparent1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.codersworld.jplibs.customFonts.SBTextViewRegular
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:minHeight="@dimen/_50dp"
                android:padding="@dimen/_10dp"
                android:text="@string/msg_exit_confirm"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtTitle"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:gravity="center_vertical|end"
                android:orientation="horizontal">

                <com.codersworld.jplibs.customFonts.SBTextViewBold
                    android:id="@+id/btnPositive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/square_button_selector"
                    android:clickable="true"
                    android:gravity="center"
                    android:minWidth="@dimen/_80dp"
                    android:minHeight="@dimen/_40dp"
                    android:text="@string/lbl_ok"
                    android:textSize="@dimen/_16sp" />

                <com.codersworld.jplibs.customFonts.SBTextViewBold
                    android:id="@+id/btnNegative"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10dp"
                    android:background="@drawable/square_color"
                    android:clickable="true"
                    android:gravity="center"
                    android:minWidth="@dimen/_80dp"
                    android:minHeight="@dimen/_40dp"
                    android:text="@string/lbl_yes"
                    android:textSize="@dimen/_16sp"
                    android:visibility="gone" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</layout>
