<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rlContainer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_280dp"
                android:minHeight="@dimen/_280dp"
                app:layout_collapseMode="parallax">

                <LinearLayout
                    android:id="@+id/llBanners"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.codersworld.jplibs.loopingviewpager.LoopingViewPager
                        android:id="@+id/viewpager"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_280dp"
                        android:layout_gravity="center"
                        android:clipToPadding="true"
                        android:touchscreenBlocksFocus="true"
                        app:autoScroll="true"
                        app:isInfinite="true"
                        app:scrollInterval="5000" />
                </LinearLayout>

                <com.codersworld.jplibs.loopingviewpager.indicator.CustomShapePagerIndicator
                    android:id="@+id/dotsIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_25dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="bottom|center_horizontal"
                    app:indicator_spacing="6dp" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5dp"
                android:minHeight="@dimen/_330dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_10dp">

                    <com.codersworld.jplibs.customFonts.SBTextViewBold
                        android:id="@+id/txtTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:minHeight="@dimen/_44dp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18dp" />

                    <LinearLayout
                        android:id="@+id/llAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_0_5dp"
                            android:layout_marginTop="@dimen/_5dp"
                            android:layout_marginBottom="@dimen/_5dp"
                            android:background="@color/button_grey_light" />

                        <com.codersworld.jplibs.customFonts.SBTextViewBold
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/lbl_address"
                            android:textColor="@color/black" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.codersworld.jplibs.customFonts.SBTextViewRegular
                                android:id="@+id/txtAddress"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_toStartOf="@+id/cardDirection"
                                android:gravity="center_vertical"
                                android:paddingStart="@dimen/_5dp"
                                android:paddingEnd="@dimen/_10dp"
                                android:text="@string/app_name"
                                android:textColor="@color/black" />

                            <androidx.cardview.widget.CardView
                                android:id="@+id/cardDirection"
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/_40dp"
                                android:layout_alignParentEnd="true"
                                android:layout_marginBottom="@dimen/_5dp"
                                android:background="?attr/selectableItemBackground"
                                app:cardBackgroundColor="@color/colorAccent"
                                app:cardCornerRadius="@dimen/_5dp">

                                <com.codersworld.jplibs.customFonts.SBTextViewBold
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:gravity="center"
                                    android:paddingStart="@dimen/_10dp"
                                    android:paddingEnd="@dimen/_10dp"
                                    android:text="@string/lbl_get_direction"
                                    android:textColor="@color/white"
                                    android:textSize="@dimen/_14dp" />

                            </androidx.cardview.widget.CardView>
                        </RelativeLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llContact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_0_5dp"
                            android:layout_marginTop="@dimen/_10dp"
                            android:layout_marginBottom="@dimen/_5dp"
                            android:background="@color/button_grey_light" />
                        <com.google.android.gms.ads.AdView
                            android:layout_marginTop="@dimen/_10dp"
                            android:id="@+id/adView2"
                            android:layout_below="@+id/image"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            ads:adSize="FULL_BANNER"
                            ads:adUnitId="@string/admob_unit_id">
                        </com.google.android.gms.ads.AdView>

                        <com.codersworld.jplibs.customFonts.SBTextViewBold
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/lbl_contact_info"
                            android:textColor="@color/black" />


                        <com.codersworld.jplibs.customFonts.SBTextViewRegular
                            android:id="@+id/txtPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autoLink="all"
                            android:gravity="center_vertical"
                            android:padding="@dimen/_5dp"
                            android:text="@string/lbl_phone"
                            android:textColor="@color/black" />

                        <com.codersworld.jplibs.customFonts.SBTextViewRegular
                            android:id="@+id/txtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autoLink="all"
                            android:gravity="center_vertical"
                            android:padding="@dimen/_5dp"
                            android:text="@string/lbl_email"
                            android:textColor="@color/black" />

                        <com.codersworld.jplibs.customFonts.SBTextViewRegular
                            android:id="@+id/txtWebsite"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autoLink="all"
                            android:gravity="center_vertical"
                            android:padding="@dimen/_5dp"
                            android:text="@string/lbl_website"
                            android:textColor="@color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llAbout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_0_5dp"
                            android:layout_marginTop="@dimen/_10dp"
                            android:layout_marginBottom="@dimen/_5dp"
                            android:background="@color/button_grey_light" />
                        <com.google.android.gms.ads.AdView
                            android:layout_marginTop="@dimen/_10dp"
                            android:id="@+id/adView"
                            android:layout_below="@+id/image"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            ads:adSize="LEADERBOARD"
                            ads:adUnitId="@string/admob_unit_id">
                        </com.google.android.gms.ads.AdView>

                        <com.codersworld.jplibs.customFonts.SBTextViewBold
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/lbl_about"
                            android:textColor="@color/black" />

                        <com.codersworld.jplibs.customFonts.SBTextViewRegular
                            android:id="@+id/txtDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:minHeight="@dimen/_44dp"
                            android:textColor="@color/black" />

                        <com.google.android.gms.ads.AdView
                            android:layout_marginTop="@dimen/_10dp"
                            android:id="@+id/adView1"
                            android:layout_below="@+id/image"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            ads:adSize="MEDIUM_RECTANGLE"
                            ads:adUnitId="@string/admob_unit_id">
                        </com.google.android.gms.ads.AdView>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>