<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_bg"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/transparent"
            app:elevation="@dimen/_10dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbars"
                android:layout_width="@dimen/_44dp"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/transparent"
                app:navigationIcon="@drawable/ic_back_white"
                app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium"
                app:titleTextColor="@color/white">


            </androidx.appcompat.widget.Toolbar>

            <com.codersworld.jplibs.customFonts.SBTextViewBold
                android:id="@+id/txtHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_0_5dp"
            android:background="@color/lightgray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_10dp"
            android:paddingEnd="@dimen/_10dp">

            <androidx.core.widget.NestedScrollView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scrollbars="none">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/_15dp">

                    <com.codersworld.jplibs.customFonts.SBTextViewBold
                        android:id="@+id/directbus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_direct_bus"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_18dp" />

                    <ListView
                        android:id="@+id/listView"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/directbus"
                        android:background="@null"
                        android:divider="@null"
                        android:dividerHeight="5dp"
                        android:paddingTop="@dimen/_10dp"
                        android:smoothScrollbar="true" />

                    <!--    <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/listView"
                            android:minHeight="@dimen/_250dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            android:layout_below="@+id/directbus"
                            android:paddingTop="@dimen/_10dp"  />-->
                    <com.google.android.gms.ads.AdView
                        android:layout_marginTop="@dimen/_10dp"
                        android:id="@+id/adView1"
                        android:layout_below="@+id/listView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        ads:adSize="FULL_BANNER"
                        ads:adUnitId="@string/admob_unit_id">
                    </com.google.android.gms.ads.AdView>

                    <com.codersworld.jplibs.customFonts.SBTextViewBold
                        android:id="@+id/multiplebus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/adView1"
                        android:layout_alignParentStart="true"
                        android:nestedScrollingEnabled="false"
                        android:paddingTop="0dp"
                        android:layout_marginTop="@dimen/_10dp"
                        android:text="@string/lbl_multi_bus"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_18dp"
                        android:textStyle="bold" />

                    <ListView
                        android:id="@+id/listView1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/multiplebus"
                        android:layout_alignParentStart="true"
                         android:background="@null"
                        android:divider="@null"
                        android:dividerHeight="5dp"
                        android:paddingTop="@dimen/_10dp"
                        android:smoothScrollbar="true" />
                    <!--
                                        <androidx.recyclerview.widget.RecyclerView
                                            android:id="@+id/listView1"
                                            android:nestedScrollingEnabled="false"
                                            android:layout_width="match_parent"
                                            android:minHeight="@dimen/_250dp"
                                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                                            android:layout_height="wrap_content"
                                            android:layout_below="@+id/multiplebus"
                                            android:paddingTop="@dimen/_10dp"
                                            android:paddingBottom="@dimen/_50dp"
                                            />
                    -->
                </RelativeLayout>
            </androidx.core.widget.NestedScrollView>
        </RelativeLayout>

    </LinearLayout>
</layout>